tests/stage2/t3_diagnostics/type_errors/type_mismatch_assign.fuse
// EXPECTED ERROR:
// type mismatch

@entrypoint
fn main() {
  val x: Int = "hello"
  println(x)
}
